--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "btoa": "^1.2.1",
     "js-cookie": "^2.2.1",
+    "moment": "^2.27.0",
     "next": "^9.3.5",
     "next-cookies": "^2.0.3",
     "next-redux-wrapper": "^4.0.1",
@@ -21,6 +22,7 @@
     "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.3",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
