--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 7777",
+    "dev": "next dev -p 7777 -H 192.168.1.36",
     "build": "next build",
-    "start": "next start -p 7777"
+    "start": "next start"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "atob": "^2.1.2",
     "axios": "^0.19.0",
     "btoa": "^1.2.1",
     "js-cookie": "^2.2.1",
+    "material-ui-dropzone": "^3.4.0",
     "moment": "^2.27.0",
     "next": "^9.3.5",
     "next-cookies": "^2.0.3",
@@ -24,6 +27,7 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.3",
     "react-redux": "^7.2.0",
+    "react-vertical-timeline-component": "^3.0.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
