--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "atob": "^2.1.2",
     "axios": "^0.19.0",
     "btoa": "^1.2.1",
+    "collect.js": "^4.28.6",
     "js-cookie": "^2.2.1",
     "material-ui-dropzone": "^3.4.0",
     "moment": "^2.27.0",
@@ -26,6 +27,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.3",
+    "react-loading-skeleton": "^2.2.0",
     "react-redux": "^7.2.0",
     "react-vertical-timeline-component": "^3.0.2",
     "redux": "^4.0.5",
@@ -34,6 +36,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
     "sweetalert2": "^9.5.4",
+    "uid": "^1.0.0",
     "validator-error-adonis": "^1.0.0"
   }
 }
