--- a/package.json
+++ b/package.json
@@ -8,35 +8,47 @@
     "start": "next start"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.13.0",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "atob": "^2.1.2",
-    "axios": "^0.19.0",
-    "btoa": "^1.2.1",
-    "collect.js": "^4.28.6",
-    "js-cookie": "^2.2.1",
-    "material-ui-dropzone": "^3.4.0",
-    "moment": "^2.27.0",
-    "next": "^9.5.5",
-    "next-cookies": "^2.0.3",
-    "next-redux-wrapper": "^4.0.1",
-    "node-fetch": "^2.6.0",
-    "nookies": "^2.0.8",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/material": "^5.15.0",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@reduxjs/toolkit": "^2.11.2",
+    "axios": "^1.6.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "collect.js": "^4.36.1",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.562.0",
+    "moment": "^2.30.1",
+    "next": "^13.5.6",
     "nprogress": "^0.2.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-dropzone": "^11.0.3",
-    "react-loading-skeleton": "^2.2.0",
-    "react-redux": "^7.2.0",
-    "react-vertical-timeline-component": "^3.0.2",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2",
-    "sweetalert2": "^9.5.4",
-    "uid": "^1.0.0",
-    "validator-error-adonis": "^1.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-loading-skeleton": "^3.3.1",
+    "react-redux": "^9.2.0",
+    "react-vertical-timeline-component": "^3.6.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.5",
+    "sweetalert2": "^11.10.1",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "uid": "^2.0.2"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
+    "@types/node": "^25.0.3",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.9.3"
   }
 }
